--- a/src/libs/vtools/dialogs/tools/dialogarcwithlength.ui
+++ b/src/libs/vtools/dialogs/tools/dialogarcwithlength.ui
@@ -140,7 +140,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_12">
      <item>
-      <widget class="QPlainTextEdit" name="plainTextEditRadius">
+      <widget class="VPlainTextEdit" name="plainTextEditRadius">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -320,7 +320,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_9">
      <item>
-      <widget class="QPlainTextEdit" name="plainTextEditF1">
+      <widget class="VPlainTextEdit" name="plainTextEditF1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -500,7 +500,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_10">
      <item>
-      <widget class="QPlainTextEdit" name="plainTextEditLength">
+      <widget class="VPlainTextEdit" name="plainTextEditLength">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -655,6 +655,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
+   <header location="global">vplaintextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../../../vmisc/share/resources/icon.qrc"/>
  </resources>
