--- a/src/libs/vtools/dialogs/tools/dialogcutarc.ui
+++ b/src/libs/vtools/dialogs/tools/dialogcutarc.ui
@@ -143,7 +143,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_formula">
      <item>
-      <widget class="QPlainTextEdit" name="plainTextEditFormula">
+      <widget class="VPlainTextEdit" name="plainTextEditFormula">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -186,8 +186,7 @@
        </property>
        <property name="icon">
         <iconset theme="go-down">
-         <normaloff/>
-        </iconset>
+         <normaloff>.</normaloff>.</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -260,6 +259,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
+   <header location="global">vplaintextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>plainTextEditFormula</tabstop>
   <tabstop>pushButtonGrowLength</tabstop>
