--- a/src/libs/vtools/dialogs/tools/dialogpointofintersectioncircles.ui
+++ b/src/libs/vtools/dialogs/tools/dialogpointofintersectioncircles.ui
@@ -140,7 +140,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_6">
      <item>
-      <widget class="QPlainTextEdit" name="plainTextEditCircle1Radius">
+      <widget class="VPlainTextEdit" name="plainTextEditCircle1Radius">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -320,7 +320,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
-      <widget class="QPlainTextEdit" name="plainTextEditCircle2Radius">
+      <widget class="VPlainTextEdit" name="plainTextEditCircle2Radius">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -488,6 +488,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
+   <header location="global">vplaintextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../../../vmisc/share/resources/icon.qrc"/>
  </resources>
