--- a/src/libs/vtools/dialogs/tools/dialogsplinepath.ui
+++ b/src/libs/vtools/dialogs/tools/dialogsplinepath.ui
@@ -169,7 +169,7 @@
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_6">
               <item>
-               <widget class="QPlainTextEdit" name="plainTextEditLength1F">
+               <widget class="VPlainTextEdit" name="plainTextEditLength1F">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -349,7 +349,7 @@
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_7">
               <item>
-               <widget class="QPlainTextEdit" name="plainTextEditAngle1F">
+               <widget class="VPlainTextEdit" name="plainTextEditAngle1F">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -542,7 +542,7 @@
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_9">
               <item>
-               <widget class="QPlainTextEdit" name="plainTextEditLength2F">
+               <widget class="VPlainTextEdit" name="plainTextEditLength2F">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -722,7 +722,7 @@
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_12">
               <item>
-               <widget class="QPlainTextEdit" name="plainTextEditAngle2F">
+               <widget class="VPlainTextEdit" name="plainTextEditAngle2F">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                   <horstretch>0</horstretch>
@@ -891,6 +891,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
+   <header location="global">vplaintextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>buttonBox</tabstop>
  </tabstops>
