--- a/src/libs/vtools/dialogs/tools/piece/tabs/tabpaths.ui
+++ b/src/libs/vtools/dialogs/tools/piece/tabs/tabpaths.ui
@@ -283,7 +283,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_6">
                 <item>
-                 <widget class="QPlainTextEdit" name="plainTextEditFormulaWidth">
+                 <widget class="VPlainTextEdit" name="plainTextEditFormulaWidth">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                     <horstretch>0</horstretch>
@@ -522,7 +522,7 @@
                  <item>
                   <layout class="QHBoxLayout" name="horizontalLayout_7">
                    <item>
-                    <widget class="QPlainTextEdit" name="plainTextEditFormulaWidthBefore">
+                    <widget class="VPlainTextEdit" name="plainTextEditFormulaWidthBefore">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -712,7 +712,7 @@
                  <item>
                   <layout class="QHBoxLayout" name="horizontalLayout_17">
                    <item>
-                    <widget class="QPlainTextEdit" name="plainTextEditFormulaWidthAfter">
+                    <widget class="VPlainTextEdit" name="plainTextEditFormulaWidthAfter">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -929,6 +929,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VPlainTextEdit</class>
+   <extends>QPlainTextEdit</extends>
+   <header location="global">vplaintextedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../../../../../vmisc/share/resources/icon.qrc"/>
  </resources>
