--- a/src/libs/vtools/dialogs/tools/piece/tabs/tabpaths.ui
+++ b/src/libs/vtools/dialogs/tools/piece/tabs/tabpaths.ui
@@ -84,6 +84,16 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="checkBoxForceFlipping">
+             <property name="toolTip">
+              <string>Force piece to be always flipped in a layout.</string>
+             </property>
+             <property name="text">
+              <string>Force flipping</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QCheckBox" name="checkBoxHideMainPath">
              <property name="toolTip">
               <string>Hide the main path if the seam allowance is enabled</string>
