--- a/src/libs/vtools/dialogs/tools/piece/tabs/tabpassmarks.ui
+++ b/src/libs/vtools/dialogs/tools/piece/tabs/tabpassmarks.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>352</width>
-    <height>482</height>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
         <x>0</x>
         <y>0</y>
         <width>332</width>
-        <height>462</height>
+        <height>547</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -203,6 +203,54 @@
             </attribute>
            </widget>
           </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonIntersection2">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>Select if need designate the corner point as a passmark</string>
+            </property>
+            <property name="text">
+             <string>Intersection 2</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroupAngleType</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonIntersection2OnlyLeft">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>Select if need designate the corner point as a passmark. Show only left passmark.</string>
+            </property>
+            <property name="text">
+             <string>Intersection 2 (only left)</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroupAngleType</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonIntersection2OnlyRight">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>Select if need designate the corner point as a passmark. Show only right passmark.</string>
+            </property>
+            <property name="text">
+             <string>Intersection 2 (only right)</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroupAngleType</string>
+            </attribute>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -241,7 +289,7 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupLineType"/>
   <buttongroup name="buttonGroupAngleType"/>
+  <buttongroup name="buttonGroupLineType"/>
  </buttongroups>
 </ui>
